--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
     <div class="card" routerLinkActive="active" (click)="navigateTo('nestjs')">
       Nest Js
     </div>
-    <div class="card" routerLinkActive="active" (click)="navigateTo('sql')">
+    <div class="card" routerLinkActive="active" (click)="navigateTo('sql/sql')">
       sql
     </div>
     <div class="card" routerLinkActive="active" (click)="navigateTo('gitHub/gitprocess')">
